--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Our Project</title>
+  <title>Chef_Bono</title>
   <style>
     /* Reset */
     * { margin: 0; padding: 0; box-sizing: border-box; }
