--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Our Project Team — All Rights Reserved</p>
+    <p>© 2025 Chef_Bono_VC_Team — All Rights Reserved</p>
   </footer>
 
 </body>
