Change navbar background color

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     /* Navbar */
     nav {
-      background: #EADBD0;
+      background: #ebc9b0;
       color: #fff;
       display: flex;
       justify-content: space-between;
