--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     /* Navbar */
     nav {
-      background: #ebc9b0;
+      background: #d4976b;
       color: #fff;
       display: flex;
       justify-content: space-between;
@@ -181,7 +181,7 @@
     <h2 style="font-family: 'Playfair Display', serif; font-weight: 2000; letter-spacing: 2px; font-size: 8rem;">Chef Bono</h2>
     <p style="font-family: 'Playfair Display', serif; font-size: 1.3rem; font-style: italic;">Your favorite virtual chef, at your service.</p>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700&display=swap" rel="stylesheet">
-    <button style="background: #EADBD0; color: #ffffff;">Learn More</button>
+    <button style="background: #d4976b; color: #ffffff;">Learn More</button>
   </section>
 
   <!-- Features -->
