--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     /* Navbar */
     nav {
-      background: #d4976b;
+      background: #b48b6e;
       color: #fff;
       display: flex;
       justify-content: space-between;
@@ -52,7 +52,7 @@
     .hero {
       text-align: center;
       padding: 100px 20px;
-      background: linear-gradient(135deg, rgba(255, 255, 255, 0.7), rgba(0, 0, 0, 0.7)), url('image2.jpg') center/cover no-repeat;
+      background: linear-gradient(135deg, rgba(117, 115, 108, 0.7), rgba(0, 0, 0, 0.7)), url('image2.jpg') center/cover no-repeat;
       color: white;
     }
 
@@ -183,7 +183,7 @@
     <p style="font-family: 'Montserrat', 'Playfair Display', serif; font-size: 1.3rem; font-style: italic;">Your favorite virtual chef, at your service.</p>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700&display=swap" rel="stylesheet">
-    <button style="background: #d4976b; color: #ffffff;">Learn More</button>
+    <button style="background: #b48b6e; color: #ffffff;">Learn More</button>
   </section>
 
   <!-- Features -->
