--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     /* Navbar */
     nav {
-      background: #b48b6e;
+      background: #d4976b;;
       color: #fff;
       display: flex;
       justify-content: space-between;
@@ -82,7 +82,7 @@
 
     /* Features Section */
     .features {
-      background: linear-gradient(135deg, rgba(71, 104, 71, 0.7), rgba(40, 68, 32, 0.7));
+      background: linear-gradient(135deg, rgba(58, 92, 58, 0.7), rgba(23, 43, 18, 0.7));
       
       padding: 60px 20px;
       text-align: center;
@@ -183,7 +183,7 @@
     <p style="font-family: 'Montserrat', 'Playfair Display', serif; font-size: 1.1rem; font-style: italic;">Getting ready for you, stay tuned.</p>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700&display=swap" rel="stylesheet">
-    <button style="background: #b48b6e; color: #ffffff;">Learn More</button>
+    <button style="background: #d4976b; color: #ffffff;">Learn More</button>
   </section>
 
   <!-- Features -->
