--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     /* Dark Mode Variables */
     :root {
       --bg-primary: #181a1b;
-      --bg-secondary: #242628;
+      --bg-secondary: #624f1f;
       --text-primary: #e8e6e3;
       --text-secondary: #e8e6e3;
       --text-light: #e8e6e3;
