--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <p style="font-family: 'Montserrat', 'Playfair Display', serif; font-size: 1.1rem; font-style: italic;">Getting ready for you, stay tuned.</p>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700&display=swap" rel="stylesheet">
-    <button style="background: #b48b6e; color: #ffffff;">Learn More</button>
+    <button style="background: var(--bg-secondary); color: var(--text-light);">Learn More</button>
   </section>
 
   <!-- Features -->
