--- a/index.html
+++ b/index.html
@@ -263,6 +263,26 @@
     <p>Email us at <a href="mailto:chef.bono.vc@outlook.com">chef.bono.vc@outlook.com</a></p>
   </section>
 
+  <section id="pdfs" style="background: #f7f9fc; padding: 60px 20px; text-align: center;">
+  <h2>Our Documents</h2>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 40px;">
+      <div>
+        <h3>PDF 1</h3>
+        <embed src="project_description.pdf" type="application/pdf" width="400" height="500" />
+      </div>
+      <div>
+        <h3>PDF 2</h3>
+        <iframe src="project_spesification_report.pdf" width="400" height="500"></iframe>
+      </div>
+      <h3>PDF 3</h3>
+        <iframe src="Analysis_report.pdf" width="400" height="500"></iframe>
+      </div>
+      <h3>PDF 4</h3>
+        <iframe src="high_level_design_report.pdf" width="400" height="500"></iframe>
+      </div>
+  </div>
+  </section>
+
   <!-- Footer -->
   <footer>
     <p>© 2025 Chef_Bono_VC_Team — All Rights Reserved</p>
