--- a/index.html
+++ b/index.html
@@ -263,25 +263,41 @@
     <p>Email us at <a href="mailto:chef.bono.vc@outlook.com">chef.bono.vc@outlook.com</a></p>
   </section>
 
-  <section id="pdfs" style="background: #f7f9fc; padding: 60px 20px; text-align: center;">
+ <section id="pdfs" style="background: #f7f9fc; padding: 60px 20px; text-align: center;">
   <h2>Our Documents</h2>
-  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 40px;">
-      <div>
-        <h3>PDF 1</h3>
-        <embed src="project_description.pdf" type="application/pdf" width="400" height="500" />
-      </div>
-      <div>
-        <h3>PDF 2</h3>
-        <iframe src="project_spesification_report.pdf" width="400" height="500"></iframe>
-      </div>
-      <h3>PDF 3</h3>
-        <iframe src="Analysis_report.pdf" width="400" height="500"></iframe>
-      </div>
-      <h3>PDF 4</h3>
-        <iframe src="high_level_design_report.pdf" width="400" height="500"></iframe>
-      </div>
+  <div id="pdf-nav" style="margin-bottom: 30px;">
+    <button onclick="showPDF(0)" style="margin: 0 10px;">PDF 1</button>
+    <button onclick="showPDF(1)" style="margin: 0 10px;">PDF 2</button>
+    <button onclick="showPDF(2)" style="margin: 0 10px;">PDF 3</button>
+    <button onclick="showPDF(3)" style="margin: 0 10px;">PDF 4</button>
   </div>
-  </section>
+  <div id="pdf-viewer">
+    <div class="pdf-item" style="display: block;">
+      <h3>PDF 1</h3>
+      <embed src="project_description.pdf" type="application/pdf" width="400" height="500" />
+    </div>
+    <div class="pdf-item" style="display: none;">
+      <h3>PDF 2</h3>
+      <iframe src="project_spesification_report.pdf" width="400" height="500"></iframe>
+    </div>
+    <div class="pdf-item" style="display: none;">
+      <h3>PDF 3</h3>
+      <iframe src="Analysis_report.pdf" width="400" height="500"></iframe>
+    </div>
+    <div class="pdf-item" style="display: none;">
+      <h3>PDF 4</h3>
+      <iframe src="high_level_design_report.pdf" width="400" height="500"></iframe>
+    </div>
+  </div>
+  <script>
+    function showPDF(index) {
+      const pdfs = document.querySelectorAll('#pdf-viewer .pdf-item');
+      pdfs.forEach((pdf, i) => {
+        pdf.style.display = i === index ? 'block' : 'none';
+      });
+    }
+  </script>
+</section>
 
   <!-- Footer -->
   <footer>
