--- a/index.html
+++ b/index.html
@@ -257,13 +257,7 @@
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="contact" class="contact">
-    <h2>📩 Get in Touch</h2>
-    <p>Email us at <a href="mailto:chef.bono.vc@outlook.com">chef.bono.vc@outlook.com</a></p>
-  </section>
-
- <section id="pdfs" style="background: #f7f9fc; padding: 60px 20px; text-align: center;">
+ <section id="pdfs" style="background: #334A33; padding: 60px 20px; text-align: center;">
   <h2>Our Documents</h2>
   <div id="pdf-nav" style="margin-bottom: 30px;">
     <button onclick="showPDF(0)" style="margin: 0 10px;">PDF 1</button>
@@ -298,6 +292,12 @@
     }
   </script>
 </section>
+
+ <!-- Contact -->
+  <section id="contact" class="contact">
+    <h2>📩 Get in Touch</h2>
+    <p>Email us at <a href="mailto:chef.bono.vc@outlook.com">chef.bono.vc@outlook.com</a></p>
+  </section>
 
   <!-- Footer -->
   <footer>
