--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     </div>
     <div class="pdf-item" style="display: none;">
       <h3>poster</h3>
-      <iframe src="poster.pdf" width="400" height="500"></iframe>
+      <iframe src="chef_bono.pdf" width="400" height="500"></iframe>
     </div>
   </div>
   <script>
