--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <h3>high_level_design_report</h3>
       <iframe src="high_level_design_report.pdf" width="400" height="500"></iframe>
     </div>
-    <div class="pdf-item" style="display: none;">
+    <div class="png-item" style="display: none;">
       <h3>poster</h3>
       <iframe src="chef_bono.png" width="400" height="500"></iframe>
     </div>
