--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </div>
   </section>
 
-<!-- ...existing code... -->
+
 <section id="pdfs" style="background: #334A33; padding: 60px 20px; text-align: center;">
   <h2>Our Documents</h2>
   <div id="pdf-nav" style="margin-bottom: 30px; display: flex; align-items: center; justify-content: center; gap: 20px;">
@@ -316,7 +316,55 @@
     updatePDFViewer();
   </script>
 </section>
-<!-- ...existing code... -->
+
+  <table border="1" cellpadding="8" cellspacing="0" style="border-collapse: collapse; width: 100%; background: #181a1b; color: #e8e6e3; font-family: Arial, sans-serif;">
+    <h2 style="text-align: center; padding: 20px 0;">TODO/Backlog</h2>
+    <thead>
+    <tr style="background: #222;">
+      <th>Task Name</th>
+      <th>Status</th>
+      <th>Priority</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Project specifics</td>
+      <td>complete</td>
+      <td>high</td>
+    </tr>
+    <tr>
+      <td>Develop image analyzer module</td>
+      <td>complete</td>
+      <td>high</td>
+    </tr>
+    <tr>
+      <td>Project Analysis report</td>
+      <td>complete</td>
+      <td>high</td>
+    </tr>
+    <tr>
+      <td>Develop STT and TTS modules</td>
+      <td>complete</td>
+      <td>low</td>
+    </tr>
+    <tr>
+      <td>Develop recipe scrapper and categorizer</td>
+      <td>complete</td>
+      <td>high</td>
+    </tr>
+    <tr>
+      <td>Develop query generator module</td>
+      <td>complete</td>
+      <td>mid</td>
+    </tr>
+    <tr>
+      <td>High level design report</td>
+      <td>complete</td>
+      <td>high</td>
+    </tr>
+  </tbody>
+</table>
+
  <!-- Contact -->
   <section id="contact" class="contact">
     <h2>📩 Get in Touch</h2>
